# webpage-categorizer

./: README.md  categorizer.py  pyproject.toml
webpagecategorizer/: categories.json  categorizer.py
